@@ -1272,6 +1272,7 @@ fi
 AC_PATH_PROG(INSTALL_INFO, install-info)
 AC_PATH_PROG(INSTALL_INFO, install-info,, /usr/sbin)
 AC_PATH_PROG(INSTALL_INFO, install-info,:, /sbin)
+AC_PATH_PROG(GZIP, gzip)
 
 dnl Add our options to ac_link now, after it is set up.
 
